tests/parsing/smtlib/v2.7/errors/017_sorted_var_bad_name_1.smt2
(set-logic ALL)
(assert (forall ((_ int)) true))
